[package]
name = "sikula"
version = "0.4.0-alpha.5"
edition = "2021"
license = "Apache-2.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
description = "A simple query language"
repository = "https://github.com/ctron/sikula"
categories = ["parser-implementations", "parsing", "text-processing"]
keywords = ["query", "language", "parser"]
readme = "README.md"
rust-version = "1.71"

[dependencies]
chumsky = "1.0.0-alpha.4"
thiserror = "1"

time = { version = "0.3", optional = true, features = ["parsing", "macros"] }

sikula-macros = { version = "0.4.0-alpha.4", path = "sikula-macros" }

[features]
default = ["time"]

[dev-dependencies]
time = { version = "0.3", features = ["parsing", "macros"] }
pretty_assertions = "1.4"

[[test]]
name = "manual"
required-features = ["time"]

[[test]]
name = "derive"
required-features = ["time"]

[[example]]
name = "cli"
required-features = ["time"]

[package.metadata."docs.rs"]
all-features = true
